fix: overflow-x on body

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@ body {
   font-size: calc(15px + 0.390625vw);
   font-weight: 300;
   background-color: #F6F6F6;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 a {
@@ -74,6 +74,10 @@ input:focus {
     height: 35vh;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+  }
+
+  html, body {
+    overflow-x: hidden; 
   }
 } 
 
